--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-  <style>
-  </style>
+    <style type="text/css">
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        #content {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0px;
+        }
+    </style>
 
 
 </head>
 <body>
-
-Hellow World!
+    <div id="content">
+        <iframe width="100%" height="100%" frameborder="0" src="http://filara2016.wix.com/filara2016" />
+    </div>
 </body>
 </html>
