--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Filara.net</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Filara.net</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
     <style type="text/css">
@@ -13,13 +13,28 @@
             height: 100%;
             overflow: hidden;
         }
+              
 
         #content {
-            position: absolute;
+            position: relative;
             left: 0;
             right: 0;
             bottom: 0;
             top: 0px;
+            height:100%;
+        }
+
+        .iframe {
+            width: 100%;
+            height: 100%;
+        }
+
+        #topBlocker {
+            position: absolute;
+            top: 0;
+            right: 20px;
+            height: 20px;
+            width: 150px;
         }
     </style>
 
@@ -27,7 +42,8 @@
 </head>
 <body>
     <div id="content">
-        <iframe width="100%" height="100%" frameborder="0" src="http://filara2016.wix.com/filara2016" />
+        <iframe class="iframe" frameborder="0" src="http://filara2016.wix.com/filara2016" />
+        <div id="topBlocker">&nbsp;sdfsdfsfsfsdfsdfsdf</div>
     </div>
 </body>
 </html>
