--- a/index.html
+++ b/index.html
@@ -16,25 +16,37 @@
               
 
         #content {
-            position: relative;
             left: 0;
             right: 0;
             bottom: 0;
-            top: 0px;
+            top: 0;
             height:100%;
         }
 
         .iframe {
+            top:0;
             width: 100%;
             height: 100%;
+            position:absolute;
+            z-index:1;
         }
 
         #topBlocker {
+            background:#fff;
             position: absolute;
             top: 0;
             right: 20px;
-            height: 20px;
-            width: 150px;
+            height: 26px;
+            width: 210px;
+            z-index:10;
+        }
+        #bottomBlocker{
+            background:#fff;
+            position: absolute;
+            bottom: 0;
+            width:100%;
+            height: 39px;
+            z-index:10;
         }
     </style>
 
@@ -42,8 +54,11 @@
 </head>
 <body>
     <div id="content">
-        <iframe class="iframe" frameborder="0" src="http://filara2016.wix.com/filara2016" />
-        <div id="topBlocker">&nbsp;sdfsdfsfsfsdfsdfsdf</div>
+        
+        <div id="topBlocker">&nbsp;</div>
+        <div id="bottomBlocker">&nbsp;</div>
+        <iframe id="fake" src="about:blank" frameborder="0"></iframe>
     </div>
+    <iframe class="iframe" frameborder="0" src="http://filara2016.wix.com/filara2016" />
 </body>
 </html>
